# vstu_schedule

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.deploy/: nginx.conf
apps/client/: apps.py
apps/common/: models.py  services.py
apps/common/migrations/: 0001_initial.py
apps/common/services/timetable_update/: clear_storage.py  snapshot.py  update_timetable.py
apps/common/services/timetable_update/timetable/: apps.py  cron_utils.py  urls.py
apps/common/services/timetable_update/timetable/views/: admin_panel.py
apps/common/services/timetable_update/version_core/: file_data.py  filemanager.py  storage_manager.py
apps/panel/: urls.py  views.py
apps/panel/services/corrections/: cache.py  context.py  correct_object.py  resolution.py
apps/panel/static/timetable_update/src/: admin_panel.js
apps/panel/tasks/: __init__.py
apps/panel/templates/timetable_update/: admin_login.html  admin_panel.html
docs/: developers.md  Вики и документация.txt
src/: src-root.txt
timetable_old/static/src/: admin_panel.js
timetable_old/timetable_project/: settings.py
vstu_schedule/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
vstu_schedule/utils/: dotenv.py
