[project]
name = "vstu-schedule"
version = "0.0.1-alpha"
description = "Unified VSTU Schedule project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-celery-beat>=2.8.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.0",
    "xlrd>=2.0.2",
]

# temporary until new version with 6.0 support will be released. Remove if django-celery-beat has version > 2.8.1 in pypi
[tool.uv.sources]
django-celery-beat = { git = "https://github.com/celery/django-celery-beat", rev = "bd429063cbb227c00905e7693c38895e44ff8e47" }

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
